h2. 2009-11-24

* [NEW] optimize and cache data, everything should be faster now
* [NEW] add CHANGELOG
* [REMOVED] panning support, will be replaced with navigation (coming soon)

h2. 2009-11-17

* [FIXED] bhamweather now works in IE

h2. 2009-11-16

* [NEW] tooltip
* [CHANGED] barometer labels are better
* [NEW] marking for 1 atmosphere on barometer scale

h2. 2009-11-14

* [NEW] activity indicator
* [NEW] panning

h2. 2009-11-09

* [NEW] gather data in the background after a request, this way we stay more up to date