@@ -9,6 +9,8 @@
 
 #activity{ background: #fff url(/images/ajax-loader.gif) no-repeat center center; height: 20px; }
 
+#changelog{ height: 400px; overflow-y: scroll; }
+
 #footer{ .grid_12; text-align: center; font-size: 80%; color: #999; margin: 1em 0 2em;
 	a{ color: #999; text-decoration: none;
     	:hover{ text-decoration: underline; }
